# ImageEdit

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS.md  Docs.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_optional.txt  round.py  runtests.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md
DOCS/imageedit/: effects.md  imagegrab.md  imagetracer.md  index.md  io.md  transform.md
documentation/reference/: MODULES.md  README.md
documentation/reference/imageedit/: effects.md  imagegrab.md  imagetracer.md  index.md  io.md  transform.md
imageedit/: effects.py  imagegrab.py  imagetracer.py  io.py  transform.py
lib/: imageEdit.py  imageGrab.py  imageTrace.py  imageTracerJs.py  imagetracer.js
main/: getPWAScreenshots.py  get_pwa_screenshots.py  makePWAImages.py  makePhoneScreenshots.py  makeProjIcons.py  makeRetro.py  make_phone_screenshots.py  make_proj_icons.py  make_pwa_images.py  make_retro.py  readWriteLayered.py  read_write_layered.py  round.py
main/input/: Cli2Gui.xcf  GimpFormats.xcf  base24.ora  base24.ora (copy).ora  base24.psd (copy).ora  blackc4t.pdn  blackc4t2.pdn  brainf.pdn  brainf2.pdn  cat_.xcf  happyshibe.pdn  happyshibe2.pdn
main/input/PWAIcons/: Home.pdn
main/input/Projects/: BinaryIOTools.xcf  Brainf.xcf  CatImage.pdn  EweSticker.xcf  ImportSize.xcf  MetPrint.xcf  MetPrint2.xcf  PyLSR.xcf  base24.psd  base24.xcf  pytaint.xcf
main/input/Projects/FHPWA/: AeroDice.xcf  PasswordGen.xcf  tailwindcolor.com-600.txt
main/input/Projects/FHPythonUtils/: BlendModes.xcf  ColourSwatch.xcf  SvgTrace.xcf
main/input/backup/: HappyShibe.pdn  Home.pdn  Lightfox.pdn  PasswordGen.pdn
main/resources/: icon.pdn  ios6.xcf  mask.pdn  material-mini.gpl  material.gpl  papirus.gpl  pixel3aScreenshot.xcf  pixel3aScreenshot_2.xcf  pixel6Screenshot.xcf  web.gpl
readme-assets/icons/: imageround.pdn
test/: test_effects.py  test_io.py  test_lib_imageEdit.py  test_transform.py
test/test_readWriteLayered/: ImageEdit.xcf (export).ora
tests/: test_effects.py  test_io.py  test_transform.py
tests/test_read_write_layered/: ImageEdit.xcf  ImageEdit.xcf (export).ora
